--- a/assets/terraform_plan.yaml
+++ b/assets/terraform_plan.yaml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
       - ft/tfplan
+  workflow_dispatch:
 jobs:
   start-runner:
     name: Start self-hosted EC2 runner.
