--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -15,7 +15,7 @@ jobs:
       label: ${{ steps.start-ec2-runner.outputs.label }}
       ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
     steps:
-      - name: Configure AWS Credentials for Wizeprompt
+      - name: Configure AWS Credentials for jrs-local
         uses: aws-actions/configure-aws-credentials@v4
         with:
           audience: sts.amazonaws.com
@@ -30,7 +30,7 @@ jobs:
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          ec2-image-id: ami-00b8917ae86a424c9
+          ec2-image-id: ami-06aa3f7caf3a30282
           ec2-instance-type: t3.medium
           subnet-id: subnet-099e0cf8d526f00d7
           security-group-id: sg-018e56852a5b353cf
