FIX: modify tf workspace and env variables 3

--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -100,7 +100,7 @@ jobs:
           BRANCH="${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}"
           if [[ $BRANCH == "main" ]]; then
             ENVIRONMENT="dev"
-            WORKSPACE="default"
+            WORKSPACE="dev"
           else
             ENVIRONMENT="dev"
             WORKSPACE="default"
