FIX: add TF_VAR as secret and remove variable from tf plan

--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -153,8 +153,9 @@ jobs:
           ENVIRONMENT: ${{ steps.dependencies.outputs.environment }}
           GITHUB_TOKEN: ${{ secrets.GH_PAT_TERRAFORM }}
           GITHUB_OWNER: ${{ secrets.GH_OWNER }}
+          TF_VAR_token: ${{ secrets.GH_PAT_TERRAFORM }}
         run: |
-          terraform plan -var token="${GITHUB_TOKEN}" -no-color
+          terraform plan -no-color
 
       - name: Terraform - Plan output file
         id: planFile
@@ -162,8 +163,9 @@ jobs:
           ENVIRONMENT: ${{ steps.dependencies.outputs.environment }}
           GITHUB_TOKEN: ${{ secrets.GH_PAT_TERRAFORM }}
           GITHUB_OWNER: ${{ secrets.GH_OWNER }}
+          TF_VAR_token: ${{ secrets.GH_PAT_TERRAFORM }}
         run: |
-          terraform plan -var token="${GITHUB_TOKEN}" -out=plan.tmp
+          terraform plan -out=plan.tmp
           terraform show -no-color plan.tmp > ./plan.out
 
       - uses: actions/github-script@v6
