--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -56,7 +56,7 @@ jobs:
           echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \
             https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
             sudo tee /etc/apt/sources.list.d/hashicorp.list
-          sudo apt -y update
+          sudo apt-get -y update
           sudo apt-get install -y terraform=1.3.7 unzip
 
       - name: Set up aws CLI
