--- a/.github/workflows/terraform_apply.yaml
+++ b/.github/workflows/terraform_apply.yaml
@@ -6,39 +6,39 @@ on:
 jobs:
   start-runner:
     name: Start self-hosted EC2 runner.
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
       pull-requests: write
-  #   outputs:
-  #     label: ${{ steps.start-ec2-runner.outputs.label }}
-  #     ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
-  #   steps:
-  #     - name: Configure AWS Credentials for jrs-local
-  #       uses: aws-actions/configure-aws-credentials@v4
-  #       with:
-  #         audience: sts.amazonaws.com
-  #         aws-region: us-east-1
-  #         role-to-assume: 'arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions-trust-policy'
-  #         role-duration-seconds: 1800
-  #         role-session-name: ${{ github.actor }}
+    outputs:
+      label: ${{ steps.start-ec2-runner.outputs.label }}
+      ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
+    steps:
+      - name: Configure AWS Credentials for jrs-local
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          audience: sts.amazonaws.com
+          aws-region: us-east-1
+          role-to-assume: 'arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions-trust-policy'
+          role-duration-seconds: 1800
+          role-session-name: ${{ github.actor }}
 
-  #     - name: Start EC2 runner
-  #       id: start-ec2-runner
-  #       uses: machulav/ec2-github-runner@v2
-  #       with:
-  #         mode: start
-  #         github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-  #         ec2-image-id: ami-06aa3f7caf3a30282
-  #         ec2-instance-type: t3.medium
-  #         subnet-id: subnet-099e0cf8d526f00d7
-  #         security-group-id: sg-018e56852a5b353cf
+      - name: Start EC2 runner
+        id: start-ec2-runner
+        uses: machulav/ec2-github-runner@v2
+        with:
+          mode: start
+          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          ec2-image-id: ami-06aa3f7caf3a30282
+          ec2-instance-type: t3.medium
+          subnet-id: subnet-099e0cf8d526f00d7
+          security-group-id: sg-018e56852a5b353cf
 
-  # dependencies:
-  #   name: Install Dependencies
-  #   needs: start-runner
-  #   runs-on: ${{ needs.start-runner.outputs.label }}
+  dependencies:
+    name: Install Dependencies
+    needs: start-runner
+    runs-on: ${{ needs.start-runner.outputs.label }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -56,42 +56,32 @@ jobs:
           echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \
             https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
             sudo tee /etc/apt/sources.list.d/hashicorp.list
-          sudo apt-get -y update
-          sudo apt-get install -y terraform=1.3.10-1 unzip
+          sudo apt -y update
+          sudo apt-get install -y terraform=1.3.7 unzip
 
       - name: Set up aws CLI
         id: set-up-aws-cli
         run: |
-          if ! aws --version >/dev/null 2>&1; then
-            echo "Installing AWS CLI..."
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip -q awscliv2.zip
-            sudo ./aws/install --update
-          else
-            echo "Updating AWS CLI..."
-            sudo ./aws/install --update
-          fi
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
 
       - name: Set ip gh CLI
         id: set-up-gh-cli
         run: |
-          type -p curl >/dev/null || (sudo apt-get update && sudo apt-get install curl -y)
-          if ! dpkg -s gh >/dev/null 2>&1; then
-            curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
-              && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
-              && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
-              && sudo apt-get update \
-              && sudo apt-get install gh -y
-          else
-            echo "GitHub CLI is already installed."
-          fi
+          type -p curl >/dev/null || (sudo apt update && sudo apt install curl -y)
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
+            && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
+            && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+            && sudo apt update \
+            && sudo apt install gh -y
 
   apply:
     name: Apply terraform plan
     needs:
        - start-runner
-      #  - dependencies
-    runs-on: self-hosted
+       - dependencies
+    runs-on: ${{ needs.start-runner.outputs.label }}
     permissions:
       id-token: write
       contents: read
@@ -156,32 +146,32 @@ jobs:
           TF_VAR_token: ${{ secrets.GH_PAT_TERRAFORM }}
         run: terraform apply -auto-approve
 
-  # stop-runner:
-  #   name: Stop self-hosted EC2 runner.
-  #   needs:
-  #     - start-runner
-  #     - dependencies
-  #     - apply
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     id-token: write
-  #     contents: read
-  #     pull-requests: write
-  #   if: ${{ always() }}
-  #   steps:
-  #     - name: Configure AWS Credentials for jrs-local
-  #       uses: aws-actions/configure-aws-credentials@v4
-  #       with:
-  #         audience: sts.amazonaws.com
-  #         aws-region: us-east-1
-  #         role-to-assume: 'arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions-trust-policy'
-  #         role-duration-seconds: 1800
-  #         role-session-name: ${{ github.actor }}
+  stop-runner:
+    name: Stop self-hosted EC2 runner.
+    needs:
+      - start-runner
+      - dependencies
+      - apply
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+      pull-requests: write
+    if: ${{ always() }}
+    steps:
+      - name: Configure AWS Credentials for jrs-local
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          audience: sts.amazonaws.com
+          aws-region: us-east-1
+          role-to-assume: 'arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions-trust-policy'
+          role-duration-seconds: 1800
+          role-session-name: ${{ github.actor }}
 
-  #     - name: Stop EC2 runner
-  #       uses: machulav/ec2-github-runner@v2
-  #       with:
-  #         mode: stop
-  #         github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-  #         label: ${{ needs.start-runner.outputs.label }}
-  #         ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
+      - name: Stop EC2 runner
+        uses: machulav/ec2-github-runner@v2
+        with:
+          mode: stop
+          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          label: ${{ needs.start-runner.outputs.label }}
+          ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
