--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -64,9 +64,16 @@ jobs:
       - name: Set up aws CLI
         id: set-up-aws-cli
         run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
+          if ! command -v aws &> /dev/null
+          then
+              echo "AWS CLI not installed. Installing..."
+              curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+              unzip awscliv2.zip
+              sudo ./aws/install
+          else
+              echo "AWS CLI is already installed."
+          fi
+
 
       - name: Set ip gh CLI
         id: set-up-gh-cli
