--- a/.github/workflows/terraform_apply.yaml
+++ b/.github/workflows/terraform_apply.yaml
@@ -46,18 +46,22 @@ jobs:
       - name: Set up Terraform
         id: set-up-terraform
         run: |
-          sudo apt-get -y update && sudo apt-get install -y gnupg software-properties-common
-          wget -O- https://apt.releases.hashicorp.com/gpg | \
-            gpg --dearmor | \
-            sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
-          gpg --no-default-keyring \
-            --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg \
-            --fingerprint
-          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \
-            https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
-            sudo tee /etc/apt/sources.list.d/hashicorp.list
-          sudo apt -y update
-          sudo apt-get install -y terraform=1.3.10-1 unzip
+          if terraform version &>/dev/null; then
+            echo "Terraform is already installed."
+          else
+            echo "Terraform is not installed. Installing..."
+            sudo apt-get -y update && sudo apt-get install -y gnupg software-properties-common
+            wget -O- https://apt.releases.hashicorp.com/gpg | \
+              gpg --dearmor | \
+              sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
+            gpg --no-default-keyring \
+              --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg \
+              --fingerprint
+            echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \
+              https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
+              sudo tee /etc/apt/sources.list.d/hashicorp.list
+            sudo apt-get -y update
+            sudo apt-get install -y terraform=1.3.10-1 unzip
 
       - name: Set up aws CLI
         id: set-up-aws-cli
@@ -75,15 +79,16 @@ jobs:
       - name: Set ip gh CLI
         id: set-up-gh-cli
         run: |
-          type -p curl >/dev/null || (sudo apt-get update && sudo apt-get install curl -y)
-          if ! dpkg -s gh >/dev/null 2>&1; then
+          if gh --version &>/dev/null; then
+            echo "GitHub CLI is already installed."
+          else
+            echo "GitHub CLI is not installed. Installing..."
+            type -p curl >/dev/null || (sudo apt update && sudo apt install curl -y)
             curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
               && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
               && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
               && sudo apt-get update \
               && sudo apt-get install gh -y
-          else
-            echo "GitHub CLI is already installed."
           fi
 
   apply:
