--- a/assets/ci.yml
+++ b/assets/ci.yml
@@ -54,45 +54,5 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'zulu'
-          server-password: MAVEN_PASSWORD
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: self-hosted-${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            self-hosted-${{ runner.os }}-maven-
-
-      - name: Cache SonarQube packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonarqube
-          restore-keys: |
-            ${{ runner.os }}-sonarqube
-
-      - name: Download actions Jacoco coverage
-        uses: actions/download-artifact@v3
-        with:
-          name: actions-jacoco
-
-      - name: Run Jacoco report
-        run: |
-          mvn -B compile
-          mvn jacoco:report@coverage-report -P jacoco-ci
-        env:
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PACKAGE_READ_TOKEN }}
-
-      - name: Scan with SonarQube
-        run: mvn -B sonar:sonar -Dsonar.pullrequest.key=${{ github.event.number }} -Dsonar.pullrequest.branch=${GITHUB_HEAD_REF} -Dsonar.pullrequest.base=${GITHUB_BASE_REF} -Dsonar.scm.revision=${{ github.event.pull_request.head.sha }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PACKAGE_READ_TOKEN }}
+      - name: Print hello
+        run: hello world!
